# SPLT-EDITOR

./: .gitignore  .prettierignore  Cargo.toml  DICTIONARY_SETUP.md  PWA_README.md  README.md  index.html  jest.config.js  next.config.ts  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite-env.d.ts  vite.config.ts
.github/workflows/: badges.yml  ci.yml  coverage.yml  release.yml
.husky/: pre-commit  pre-push
public/: .nojekyll  404.html  manifest.json  sw.js
scripts/: convertFontToBase64.js
src/: App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Capabilities.toml  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/adapters/: FileDataRepository.ts  FileDataRepositoryImpl.ts  index.ts
src/application/: index.ts
src/domain/: index.ts
src/gateways/: NoteRepository.ts
src/infra/: Diff2HtmlAdapter.ts  FileSettingsRepo.ts  MonacoThemeService.ts  PaginationService.ts  PaginationServiceOptimized.ts  index.ts
src/presentation/: index.ts
src/types/: common.ts  cssmodule.d.ts  global.d.ts  images.d.ts  intl-segmenter.d.ts
src/usecases/: LoadEditorSettings.ts  SaveEditorSettings.ts  index.ts  settingsUseCase.ts
src/utils/: dateFormatter.ts  deviceDetection.ts  editorOptimization.ts  fileUtils.ts  filenameValidation.ts  hexToRgba.ts  imageUtils.ts  index.ts  isTauri.ts  logger.ts  manifestManager.ts  numberFormatter.ts  performanceOptimizer.ts  pwaDetection.ts  scaleCalculator.ts  swDebug.ts  testHelpers.ts  textValidator.ts  themeManager.ts  wordCounter.ts
src/workers/: diffWorker.ts  performanceWorker.ts  useMonacoWorker.ts
(+253 files in other folders)
